@@ -73,7 +73,7 @@ class cpu_temp extends phodevi_sensor
 	}
 	private static function cpu_temp_windows()
 	{
-		$output = trim(shell_exec('powershell (Get-WmiObject MSAcpi_ThermalZoneTemperature -Namespace "root/wmi").CurrentTemperature'));
+		$output = trim(shell_exec('powershell -NoProfile (Get-WmiObject MSAcpi_ThermalZoneTemperature -Namespace "root/wmi").CurrentTemperature'));
 		if(!empty($output) && is_numeric($output) && $output > 0)
 		{
 			// Convert to C
